--- a/英语/词汇.md
+++ b/英语/词汇.md
@@ -3451,9 +3451,375 @@ mall meet at the mall and go shopping
 
 hinge oil the hinge
 
-
-
 ### 第九天11.25
+
+#### 复习
+
+groom groom her horse
+
+bracket the information is included in brakets
+
+rein pull both reins
+
+peg
+
+inaugurate
+
+stride
+
+fury
+
+oriental
+
+underlying
+
+monopoly and monologue
+
+contend
+
+cereal
+
+legacy and  legislation
+
+distract
+
+interruption
+
+segregate
+
+fiber
+
+crush
+
+swamp
+
+slump
+
+pastry
+
+petty
+
+emerge
+
+trolley
+
+shrimp
+
+inhabitant
+
+gorgeous
+
+susceptible and suspicious
+
+devotion
+
+commonwealth
+
+fracture
+
+tuition
+
+hostile
+
+brood
+
+cynical
+
+ vigorous
+
+thorn
+
+chief and chef
+
+couch and coach
+
+retort
+
+greed
+
+beyond
+
+reign
+
+humble
+
+scrape and scrap
+
+radius and radiant
+
+overthrow
+
+council
+
+perspiration
+
+gleam
+
+lunar
+
+### 扇贝
+
+remedy
+
+plain
+
+ultimate
+
+preclude precludes him from disclosing any confidential detail
+
+constitution
+
+exotic
+
+disease
+
+distort accused of distorting the truth
+
+probation
+
+slot prime-time slot
+
+subsidiary lots of subsidiaries
+
+homogeneous
+
+electron
+
+norm
+
+normee
+
+slick
+
+perception
+
+cord and chord
+
+contamination
+
+eloquent
+
+sovereign
+
+reinforce
+
+incredible
+
+clash
+
+preference based on our profiles and preferences
+
+participation
+
+confer
+
+nonetheless
+
+oppress oppress religious minorities
+
+rejoice 
+
+epoch
+
+porch sat out on the porch to cool off
+
+coward a real coward when it comes to show your love
+
+wreck the wreck of the famous ship
+
+specific specific instructions
+
+jack raise the jack
+
+versus two general classes of learners - helpless versus mastery-oriented
+
+profess the man profess to be obsessional about cleanness
+
+prone is prone to cancer
+
+elaborate  elaborate computer system
+
+negligible  the scar of the  car is negligible
+
+casualty rising number of casualties
+
+shrewd  the shrewd businessman
+
+persistence
+
+itinerary plan a detailed itinerary
+
+isle
+
+grease
+
+manual manual workers
+
+nurture
+
+sequence a sequence of smart schooling
+
+motel the motel is ahead about a mile from here
+
+clearance the plane took off after getting clearance
+
+strand brushed a strand of hair away from the woman's face
+
+clockwise 
+
+ornament an ornament made of shells on the wall
+
+deficiency the deficiency of this plan is very clear
+
+defect
+
+descent a descent of temperature
+
+sieve
+
+triumphant
+
+physiological  a series of physiological reactions
+
+compartment the first-class compartment
+
+blush
+
+recession the economic recession
+
+budge
+
+cannon
+
+divorce
+
+comprehensive they did a comprehensive study on learning styles
+
+uranium
+
+fraud
+
+rectify rectify the mistake
+
+opaque an opaque cup
+
+rupture natural gas were halted due to a pipeline rupture
+
+sue 
+
+fitting make fitting for old cars
+
+cavity the cavity of my teeth
+
+fin dolphins use their fins to change direction
+
+coherent develop a coherent view of the natural world
+
+definitive definitive answer
+
+poverty
+
+spite do those things out of spite
+
+turnover an annual turnover of 5 million pounds
+
+fraction a fraction of that average
+
+gown evening gown
+
+conception
+
+numerous numerous errors
+
+curb curb the spread of the virus
+
+contrast sharp contrast between his earlier and later works
+
+incidence a high incidence of crime
+
+paperback over 30000 copies in paperback
+
+orientation greater orientation to the market
+
+occasional occasional visits to his parents
+
+valve a heart valve
+
+bypass the western bypass
+
+scheme honorable schemes
+
+propel rocket-propel weapons
+
+nickel nickel can be used for making coins
+
+testimony delivered a testimony in court
+
+sergeant the sergeant is bellowing commands to his troops
+
+bellow I was distraught and let out a bellow of tearful rage
+
+cellar a coal cellar
+
+ingenious he is an ingenious author
+
+dominant dominant theme of the conference
+
+crucial a topic of crucial importance
+
+cape the cape extends far into the ocean
+
+contention a lot of contention about that issue
+
+despise he despised himself for being timid
+
+undue  put himself under undue strain
+
+verdict the jury reached a unanimous verdict of not guilty
+
+corrupt the system is inefficient and corrupt
+
+coal  put more coal into fire
+
+parasite regard as parasites in society
+
+payload carry a payload of 200 passengers
+
+conclude
+
+melody
+
+convene the council will be convening on the 15th
+
+precedent setting a dangerous precedent
+
+stitch keep the stitches small
+
+deficient
+
+hatch
+
+saturate the ground had been saturated
+
+prosperous a prosperous bussinessman
+
+resent I resented her criticism
+
+foil Chocolates are wrapped in gold foil
+
+induce  Noting induce me to accept the job
+
+juvenile juvenile crime
+
+ozone the ozone layer
+
+ 
+
+
+
+
+
+
 
 ### 第十天11.26
 
