--- a/11月/之前/6.s081.md
+++ b/11月/之前/6.s081.md
@@ -46,7 +46,17 @@ xv6采用传统的内核形式
 
 当进程需要调用一个内核服务时，进程会调用一个系统调用，系统调用进入内核，内盒执行服务并返回，一个进程在用户空间和内核空间交替进行.下面列举了xv6所有的系统调用
 
+每个正在运行的程序，称为进程，都有包含指令、数据和堆栈的内存
+
+一个进程需要调用一个内核服务时，它会调用一个系统调用，这是操作系统接口中的一个调用。系统调用进入内核；内核执行服务并返回。因此，一个进程在用户空间和内核空间之间交替执行。
+
+![image-20221125235415871](https://raw.githubusercontent.com/lozijy/image/main/image-20221125235415871.png)
+
+内核使用CPU提供的硬件保护机制来确保每个在用户空间执行的进程只能访问它自己的内存。内核程序的执行拥有操控硬件的权限，它需要实现这些保护；而用户程序执行时没有这些特权。当用户程序调用系统调用时，硬件会提升权限级别，并开始执行内核中预先安排好的函数。
+
 2.系统接口
+
+这也是最常见的Linux/POSIX的系统调用
 
 ![image-20221031133814798](C:\Users\lonux\AppData\Roaming\Typora\typora-user-images\image-20221031133814798.png)
 
