--- a/11月/之前/6.s081.md
+++ b/11月/之前/6.s081.md
@@ -44,9 +44,103 @@ lab:
 
 ## 操作系统的目标
 
+1.方便
+
+操作系统通过编译命令将高级语言书写的程序翻译成机器语言，或者用户可以通过操作系统提供的接口管理计算机
+
+为程序员提供大量系统调用
+
+2.有效
+
+OS通过各种算法，比如说页面置换算法，进程调度算法，作业调度算法等等加快程序的运行，缩短程序的运行周期，提高系统的吞吐量
+
+3.可扩充
+
+这些年广泛采用来微内核的设计，由于采用的是C/S模式，与硬件高度紧密的部分都设计在微内核中，而关于进程管理，内存管理，文件管理，磁盘管理功能的实现都存在于用户态的服务器中，因此在不同的硬件上跑的时候需改动的地方较小，具有良好的可扩充型.
+
+值得注意的是，linux,windows,xv6等最火的操作系统都是采用的是宏内核，微内核一般应用在嵌入式系统中，因为微内核进行更多次的核心态用户态切换导致性能下降严重.
+
+4.开放
+
+系统能遵循世界标准规范，使彼此能相互兼容.比如常见的POSIX标准
+
+## 操作系统的作用
+
+1.作为用户和计算机硬件系统之间的接口
+
+2.作为计算机系统资源的管理者
+
+3.实现了对计算机资源的抽象
+
 ## 操作系统的特性
 
+### 并发:
+
+并行性:两个或多个事件在同一时刻发生
+
+并发性:两个或多个事件在同一时间间隔内发生
+
+并发是在宏观上同时发生，在微观上是交替执行的
+
+如果计算机有多个处理器，则这些并发执行的程序便可分配到多个处理器上实现并行执行
+
+
+
+引入了进程的概念，进程是指在系统中能独立运行并作为资源分配的基本单位，它是由一组机器指令，数据和堆栈等组成，是一个能独立运行的活动实体
+
+### 共享:
+
+共享指系统资源被并发执行的多个进程共同使用，资源中的资源远小于多道程序需求的总和，会形成它们对共享资源的争夺，因此操作系统要对资源共享进行妥善处理
+
+资源共享方式:
+
+1.互斥共享
+
+针对打印机等资源，一段时间内只能有一个进程对资源进行访问，这种资源叫临界资源系统中大多数物理设备，如栈，变量，表格等
+
+虚拟:
+
+异步:
+
 ## 操作系统的主要功能
+
+### 处理机:
+
+进程控制
+
+进程同步
+
+进程通信
+
+进程调度
+
+### 存储器:
+
+内存分配
+
+内存保护
+
+地址映射
+
+内存扩充
+
+### 设备管理:
+
+缓冲管理
+
+设备分配
+
+设备处理
+
+### 文件管理:
+
+文件存储空间管理
+
+目录管理
+
+文件的读写管理和保护
+
+
 
 # 第零章 环境配置和相关工具的使用
 
@@ -82,11 +176,9 @@ xv6提供了丰富的系统接口
 
 这也是最常见的Linux/POSIX的系统调用
 
-![image-20221031133814798](C:\Users\lonux\AppData\Roaming\Typora\typora-user-images\image-20221031133814798.png)
+![image-20221126164515155](https://raw.githubusercontent.com/lozijy/image/main/image-20221126164515155.png)
 
-![image-20221031133838412](C:\Users\lonux\AppData\Roaming\Typora\typora-user-images\image-20221031133838412.png)
-
-
+![image-20221126164544969](https://raw.githubusercontent.com/lozijy/image/main/image-20221126164544969.png)
 
 ## I/O和文件描述符
 
