--- a/英语/词汇.md
+++ b/英语/词汇.md
@@ -3557,7 +3557,7 @@ gleam
 
 lunar
 
-### 扇贝
+#### 扇贝
 
 remedy
 
@@ -3605,7 +3605,7 @@ reinforce
 
 incredible
 
-clash
+clash  Clashes brock out between police and demonstrators
 
 preference based on our profiles and preferences
 
@@ -3617,9 +3617,9 @@ nonetheless
 
 oppress oppress religious minorities
 
-rejoice 
+rejoice he rejoiced in his good fortune of the chance to meet his idol
 
-epoch
+epoch the end of an epoch in the country's history
 
 porch sat out on the porch to cool off
 
@@ -3823,6 +3823,180 @@ ozone the ozone layer
 
 ### 第十天11.26
 
+忙于作业和摆烂..没做
+
 ### 第十一天11.27
+
+#### 复习
+
+voilent
+
+crucial
+
+handicap
+
+budge I tried moving the freezer but it won't budge
+
+ingenious
+
+precedent
+
+gorgeous
+
+saturate
+
+verdict
+
+complement
+
+belly
+
+correspondence
+
+optical
+
+indefinitely
+
+gravitation
+
+ethical
+
+religious
+
+deficient
+
+default the company defaulted on its initial payment
+
+ethnic
+
+perception
+
+opaque
+
+interruption
+
+coherent
+
+hum
+
+triumphant triumphant return
+
+subsidiary
+
+propel we are propelled to go forward
+
+condemnation
+
+huddle
+
+undermine
+
+ultimate accept ultimate responsibility . the ultimate collective control of human destinies
+
+wreck
+
+sieve
+
+gown a new evening gown
+
+rupture a pipeline rupture
+
+plain
+
+slick
+
+refund asked for refund
+
+specification
+
+battle
+
+descent
+
+coward
+
+prosperous
+
+constitution the country's constitution
+
+comprehensive comprehensive study
+
+orientation orientation to the market
+
+consultant
+
+parasite
+
+probation two year's probation
+
+discern
+
+trolley put our luggage on a trolley
+
+scrap
+
+ceramic ceramic tiles
+
+wrench wrenching him away from his mother
+
+wretch you wretch!
+
+epoch the end of the epoch
+
+bypass the western bypass
+
+profess the man profess to be obsessional about cleanness
+
+cereal I had a bowl of cereal
+
+fracture the company was fractured into several smaller groups
+
+cellar a coal cellar
+
+undue  put himself under undue strain
+
+dispose we have to dispose of these old magazines
+
+chorus
+
+incorporate and inaugurate 
+
+intersection the busy intersection often sees traffic
+
+critical critical to your future
+
+critical and crucial
+
+specific specific instructions
+
+itinerary plan a detailed itinerary
+
+casualty number of casualty
+
+casualty and casual
+
+distort distort and retort
+
+transition
+
+suite hotel suite . that suite of tools 那套工具
+
+resent I deeply resent her criticism
+
+overhear I overhear a conversation
+
+synthesis
+
+preach she preached economy as the best means of solving crisis
+
+curb curb the spread of virus
+
+census traffic census
+
+ornament a ornament made by shell
+
+exposition visit the exposition
+
+
 
 ### 第十二天11.28
