--- a/11月/lecture/6.s081.md
+++ b/11月/lecture/6.s081.md
@@ -158,18 +158,6 @@ xv6模仿了Unix的内部设计
 
 xv6采用传统的内核形式--宏内核
 
-## 进程
-
-每个正在运行的程序，称为进程，都有包含指令、数据和堆栈的内存。
-
-
-
-一个进程需要调用一个内核服务时，它会调用一个系统调用，这是操作系统接口中的一个调用。系统调用进入内核；内核执行服务并返回。因此，一个进程在用户空间和内核空间之间交替执行。
-
-![image-20221125235415871](https://raw.githubusercontent.com/lozijy/image/main/image-20221125235415871.png)
-
-内核使用CPU提供的硬件保护机制来确保每个在用户空间执行的进程只能访问它自己的内存。内核程序的执行拥有操控硬件的权限，它需要实现这些保护；而用户程序执行时没有这些特权。当用户程序调用系统调用时，硬件会提升权限级别，并开始执行内核中预先安排好的函数。
-
 ## 系统接口
 
 xv6提供了丰富的系统接口
@@ -179,6 +167,60 @@ xv6提供了丰富的系统接口
 ![image-20221126164515155](https://raw.githubusercontent.com/lozijy/image/main/image-20221126164515155.png)
 
 ![image-20221126164544969](https://raw.githubusercontent.com/lozijy/image/main/image-20221126164544969.png)
+
+## 进程
+
+每个正在运行的程序，称为进程，都有包含指令、数据和堆栈的内存。
+
+
+
+### 进程与系统调用,核心态与用户态
+
+
+
+一个进程需要调用一个内核服务时，它会调用一个系统调用，这是操作系统接口中的一个调用。系统调用进入内核；内核执行服务并返回。因此，一个进程在用户空间和内核空间之间交替执行。
+
+![image-20221125235415871](https://raw.githubusercontent.com/lozijy/image/main/image-20221125235415871.png)
+
+内核使用CPU提供的硬件保护机制来确保每个在用户空间执行的进程只能访问它自己的内存。内核程序的执行拥有操控硬件的权限，它需要实现这些保护；而用户程序执行时没有这些特权。当用户程序调用系统调用时，硬件会提升权限级别，并开始执行内核中预先安排好的函数。
+
+### fork
+
+创建一个子进程，考虑编译后的二进制文件，子进程会完全复制这些二进制文件，在内存中，他们拥有相同的命令，数据和栈，而且他们都认为自己是从虚拟内存0开始执行的。他们都会抢占cpu资源，所以他们执行的操作通常是交叉进行的(比如说我们fork一个进程，然后打印一串字符"hello",那么就会显示如"hhellloelo"这样如同乱码的字符)。
+
+返回:如果是父进程，就会返回0,如果是子进程就会返回pid,所以调用fork的程序我们一般要用if判断是子进程还是父进程来执行不同的操作
+
+```c
+int pid=fork();
+if(pid!=0){
+    pid=wait((int *)0)
+    printf("parent!");
+}else{
+    printf("child!");
+    exit(0)
+}
+```
+
+### exec
+
+exec系统调用使用从文件系统中存储的文件所加载的新内存映像替换调用进程的内存。
+
+exec系统调用有两个参数,文件名和参数args,args是一个字符串数组,第一项通常是要执行的文件名，往往跳过，最后一项为0表示字符串数组已结束
+
+例如:
+
+```c
+char* argv[3];
+argv[0] = "echo";
+argv[1] = "hello";
+argv[2] = 0;
+exec("/bin/echo", argv);
+printf("exec error\n");
+```
+
+
+
+
 
 ## I/O和文件描述符
 
@@ -270,7 +312,49 @@ if (fork() == 0) {
 cat <input.txt
 ```
 
+需要注意的几点:
+
+1.fork和exec是常见的一对系统调用组合.
+
+fork创建一个子进程，考虑编译后的二进制文件，子进程会完全复制这些二进制文件.
+
+exec系统调用使用从文件系统中存储的文件所加载的新内存映像替换调用进程的内存.
+
+使用fork+exec的组合会使fork替换掉的是新生成的子进程而不会对父进程产生影响。
+
+但从上面的例子中可以看出为什么不会有forkexec这样的一个系统调用，因为在fork后我们可以通过close,open等系统调用后再exec实现重定向,考虑一个假想的forkexec系统调用的话，他虽然也能实现执行其他系统调用的功能，但在重定向方面是很笨拙的
+
+2.虽然fork复制了文件描述符表，但基础文件偏移量在子进程和父进程之间是共享的，考虑如下程序
+
+```c
+if (fork() == 0) {
+    write(1, "hello ", 6);
+    exit(0);
+} else {
+    wait(0);
+    write(1, "world\n", 6);
+}
+```
+
+会在标准输出中打印hello world而非
+
+world
+
+hello
+
+因为基础文件偏移量在子父进程之间共享，这样有利于从shell命令序列产生顺序输出，比如(echo hello;echo world)>output.txt
+
 #### dup
+
+dup系统调用复制一个现有的文件描述符，返回一个新的文件描述符，和fork产生的文件描述符一样，二者的现有的文件描述符和新的文件描述符的基础文件偏移量也是共享的，考虑以下代码:
+
+```c
+fd = dup(1);
+write(1, "hello ", 6);
+write(fd, "world\n", 6);
+```
+
+也是会输出hello world 
 
 #### pipe
 
@@ -381,41 +465,7 @@ int main(){
 
 ## 进程和内存
 
-1.fork
-
-创建一个子进程，考虑编译后的二进制文件，子进程会完全复制这些二进制文件，在内存中，他们拥有相同的命令，数据和栈，而且他们都认为自己是从虚拟内存0开始执行的。他们都会抢占cpu资源，所以他们执行的操作通常是交叉进行的(比如说我们fork一个进程，然后打印一串字符"hello",那么就会显示如"hhellloelo"这样如同乱码的字符)。
-
-返回:如果是父进程，就会返回0,如果是子进程就会返回pid,所以调用fork的程序我们一般要用if判断是子进程还是父进程来执行不同的操作
-
-```c
-int pid=fork();
-if(pid!=0){
-    pid=wait((int *)0)
-    printf("parent!");
-}else{
-    printf("child!");
-    exit(0)
-}
-```
-
-2.exec
-
-`exec系统调用使用从文件系统中存储的文件所加载的新内存映像替换调用进程的内存。
-
-exec系统调用有两个参数,文件名和参数args,args是一个字符串数组,第一项通常是要执行的文件名，往往跳过，最后一项为0表示字符串数组已结束
-
-例如:
-
-```c
-char* argv[3];
-argv[0] = "echo";
-argv[1] = "hello";
-argv[2] = 0;
-exec("/bin/echo", argv);
-printf("exec error\n");
-```
-
-## I/O和文件描述符
+## 
 
 ##### 摘录:
 
