--- a/12月/6级/词汇.md
+++ b/12月/6级/词汇.md
@@ -3997,6 +3997,264 @@ ornament a ornament made by shell
 
 exposition visit the exposition
 
+#### 扇贝
+
+precious
+
+invert invert the order of the words
+
+legislation the new legislation
+
+oak　made of oak
+
+commence she commenced her medical career in 1956
+
+inclusive the rent is inclusive of water and heating
+
+principal the principal of this college
+
+principal and principle
+
+forthcoming the forthcoming election
+
+brutal brutal attack
+
+diversion a diversion to make us forget the main point
+
+fundamental a fundamental change
+
+twist twisted into a knot
+
+radically differ radically
+
+clan the whole clan coming to your party
+
+intellect she is famous for her intellect
+
+implication implication of their actions
+
+repression
+
+lieutenant
+
+defendant the defendant was sentenced to death
+
+brink the brink of a nervous breakdown
+
+recruit recruit more volunteers
+
+deficit budget deficit
+
+quart a quart of milk
+
+scratch the dog scratched itself behind the ear
+
+compose compose a song
+
+drawback the great drawback to living near a street is racket
+
+intense intense concentration
+
+outline a brief outline of the events
+
+veto the president vetoed the tax cut
+
+dissipate the sun dissipate the mist
+
+insect insect species
+
+perfume a range of perfumes
+
+counsel counsel for the defendant submitted that his client was clearly innocent . We guide and counsel the young on life-changing decisions
+
+cognitive help a child's cognitive development
+
+tempt I was tempt by the dessert menu
+
+diverse diverse cultures
+
+magnitude the magnitude of her achievements
+
+magnificent
+
+commentary the commentary of the game
+
+discharge the factory was fined for discharging industrial wastes
+
+coarse the carpenter's hands became coarse
+
+pesticide Farmers spray pesticides on their crops
+
+crops These insects can wreak havoc on crops.                                                                                          
+
+havoc Continuing strikes are beginning to play havoc with the national economy.
+
+envious envious of your new dress
+
+realistic he is realistic enough to know he's not going to succeed overnight
+
+wardrobe the wardrobe is small
+
+deport the refugees were deported back
+
+refuge They took refuge in a bomb shelter.
+
+hazard serious health hazard to the local population
+
+Mercury high levels of mercury in local dolphins
+
+enclosure there are several enclosures in the envelope
+
+haul she hauled the box into her room
+
+extravagant and vacant
+
+disrupt traffic was disrupted by a serious car accident
+
+household low-income household
+
+spacious the hotel suite are spacious
+
+cabin cabin seats 
+
+reluctant she was reluctant to admit her mistake
+
+contradict contradict your father
+
+belt safety belt
+
+yoke the yoke of the slavery
+
+inertia this feeling of inertia 无力的感觉
+
+cling she cling to the hope that her son is not dead
+
+scope your question is beyond the scope of this book
+
+wax
+
+fabricate the story was fabricated
+
+streak the dirty streak . with an adventurous streak
+
+unity unity of the nation
+
+garment garments of all kinds
+
+pristine only two months and in pristine condition
+
+wholesaler furniture wholesaler
+
+senator state senator
+
+solemn a solemn expression
+
+stab stab him in the stomach
+
+contract read the contract carefully before you sign it
+
+reservation A reservation is essential
+
+formal Formal diplomatic relations were established
+
+prosper  his business started to prosper
+
+vocal vocal cord
+
+optical and optimum
+
+presentation the presentation of prizes began. organize a presentation
+
+cosmopolitan cosmopolitan city
+
+negligence
+
+lever not correct to use friendship as a lever to obtain advancement
+
+captive He remained a captive to her beauty
+
+bowel he has trouble with his bowels
+
+bump I bumped into someone I know on the platform . the bus bumped along the mountain road
+
+coalition coalition government
+
+bully bully his young brother
+
+religion science and religion
+
+forge forge a new career
+
+ savage
+
+vengeance he swore vengeance on the  murderer
+
+detach detach myself from the reality of these terrible events
+
+telecommunications market for telecommynications
+
+machinery use of industrial machinery
+
+superintendent the man became superintendent
+
+irrespective the law applies to everyone irrespective of race
+
+marble a marble floor
+
+impetus his impetus to study
+
+gland the gland in his neck
+
+manipulate she manipulated the lights to get just the effect she wanted
+
+conspicuous his conspicuous red hair
+
+booth a voting booth
+
+posture an upright posture
+
+incompatible software is often incompatible with older computers
+
+opponent he knocked down his opponent in the contest
+
+garage take the car to the local garage to get it fixed
+
+distill distill fresh water from sea water
+
+lounge he waited in the VIP lounge
+
+resort solve the problem without resorting to violence
+
+poke poke her finger into the hole
+
+canteen eat lunch in the canteen
+
+corporate corporate executives
+
+flexible need a foreign policy that is more flexible
+
+patron artists have difficulty in finding patrons
+
+recede her back receded into the distance and is finally out of my sight
+
+briefcase he has bought a new briefcase
+
+entail a job that would entail a lot of travelling
+
+surgery recovered from heart surgery
+
+graze there were cows grazing beside the river
+
+tick the taxi's meter kept ticking away
+
+geology the students went to study the geology of that region
+
+bruise he got a bad bruise on his leg 
+
+plausible gave a more plausible explanation
+
+orient the students are oriented towards science subjects
+
 
 
 ### 第十二天11.28
