--- a/12月/6级/词汇.md
+++ b/12月/6级/词汇.md
@@ -4258,3 +4258,212 @@ orient the students are oriented towards science subjects
 
 
 ### 第十二天11.28
+
+#### 复习
+
+defendant
+
+coalition
+
+gasp
+
+pesticide
+
+vicious
+
+dissipate
+
+cosmonaut
+
+substantial
+
+dub
+
+perception
+
+commence
+
+tack
+
+patron
+
+conspicuous
+
+vocal
+
+pristine
+
+fraction
+
+brace
+
+posture
+
+bump
+
+mason
+
+disrupt
+
+slate
+
+ingenious
+
+surgery
+
+Mercury
+
+tempt
+
+contempt
+
+briefcase
+
+queer
+
+bureaucracy
+
+detective
+
+veto
+
+yoke
+
+impetus
+
+breach
+
+preach
+
+orient
+
+recycle
+
+wardrobe
+
+versatile
+
+surge
+
+motivate
+
+elapse
+
+feminine
+
+senator
+
+enclosure
+
+contradict
+
+salvation
+
+revision
+
+decorate
+
+clash
+
+hatred
+
+intact
+
+vengeance
+
+formal
+
+priest
+
+invert
+
+parasite
+
+batch
+
+garment
+
+cabin
+
+helmet
+
+deficit
+
+captive
+
+conform
+
+cling
+
+counsel
+
+cosmopolitan
+
+gown a new evening gown
+
+forthcoming
+
+courtesy
+
+specific
+
+compose
+
+deficiency
+
+morality
+
+convene
+
+lever
+
+refer
+
+missionary
+
+coward
+
+imposing
+
+bribe
+
+diverse
+
+irrespective
+
+clutch
+
+contract
+
+brink the brink of a nervous breakdown
+
+verge the verge of tears
+
+superintendent
+
+scope the scope of the book
+
+prosper his business start to prosper
+
+glaring a glaring example of political corruption
+
+diversion a diversion to make us forget the main point 
+
+diversion and diverse
+
+compliment and compartment
+
+itinerary plan a detailed itinerary
+
+lounge he waited in the VIP lounge
+
+spacious
+
+batter and battle
+
+fort and forge
+
+resent and present and represent
+
+
+
