--- a/12月/6级/词汇.md
+++ b/12月/6级/词汇.md
@@ -4467,3 +4467,333 @@ resent and present and represent
 
 
 
+### 第十三天11.29
+
+#### 复习
+
+ford and fort
+
+compromise
+
+colition
+
+converse
+
+deduct
+
+referee
+
+contradict
+
+initiative
+
+deficit
+
+sturdy
+
+####  扇贝
+
+intellectual
+
+rebellion
+
+relish relish challenges in life
+
+instrumental he was instrumental in bringing about an end to the conflict
+
+retention the retention of old technology
+
+linen a linen coat
+
+concede he conceded defeat reluctantly
+
+sediment a thick layer of sediment in the bottom of the teakettle
+
+rip the poster had been ripped to pieces
+
+stumble the housemaid stumbled
+
+shear shear sheep
+
+compose compose a song
+
+contract read the contract carefully
+
+oriental oriental art
+
+imperative a political imperative
+
+radically differ radically
+
+preliminary preliminary results
+
+lash the rider lashed the horse
+
+contradiction the contradiction between the two opinions
+
+scratch the dog scratched itself
+
+obscure her lecture is very obscure
+
+slump Car sales have slumped by 20%
+
+rein pull on both reins to slow a horse
+
+venture venturing on a long journey
+
+scope beyond the scope of this book
+
+monopoly Scientific achievement is not a male monopoly
+
+leather a leather jacket
+
+companion fear was the hostage's constant companion
+
+its rhetorical companion "energy security "are ,however ,slippery concepts that are rarely thought through
+
+slippery concepts 含糊概念
+
+innate she has an innate ability to dance
+
+urine the doctor told him to watch his urine's color
+
+pest control insect pests
+
+inlet there is a tiny fishing village by a rocky inlet
+
+culminate my arguments with the boss culminated in my resignation
+
+bulletin A bulletin on the President's health
+
+outbreak the outbreak of strike paralysed whole public service
+
+liberal A liberal society 
+
+regiment A regiment was stationed in our town
+
+regime 
+
+complexion she has a light complexion
+
+situated
+
+flush they flushed the toilet paper down the toilet . 
+
+pedal He pushed hard on the brake pedal to avoid a collision
+
+dignity she accepted the criticism with quiet dugnity
+
+implicit his seemingly friendly words were interpreted as an implicit threat
+
+notation Musical notation is a way of writing down music
+
+trifle He told her not to bother him with trifles
+
+indignation the news roused great indignation
+
+municipal the city will build a municipal library in the downtown
+
+prestige national prestige in the world
+
+render render him unconscious . render service to the needy
+
+overturn My opinion was overturned by the article I read
+
+complication the bad weather add a further complication to our journey
+
+crop Sugar is an important crop on the island
+
+champagne  He always celebrated his birthday with a bottle of champagne
+
+cane an old man with a wooden walking cane 
+
+disposition sensitive disposition
+
+prune spent the day pruning roses
+
+cooperative
+
+curt with a curt reply
+
+moreover
+
+condemn condemning the killing
+
+extent the extent of the damage
+
+consolidate she consolidate her power during her first year in office
+
+mobilize you have to mobilize the public's support for the campaign
+
+petition they signed a petition in support if the worker's demands
+
+terrace he walked out onto the terrace
+
+paralyze the accident left her paralyzed in both legs
+
+harp is it hard to learn to play the harp
+
+sulfur sulfur emissions must be cut by 90 percent to avoid further damage to sensitive ecosystems
+
+transaction the transaction gets rejected
+
+transcend Music is a language that transcends cultural barriers
+
+forcibly Bystanders were forcibly removed
+
+feudal a feudal society
+
+ strategy marketing strategies
+
+residential in a residential area
+
+disturbance causing a disturbance
+
+tan the sun tan her skin
+
+custom social customs vary greatly
+
+pistol the soldier discharged his automatic pistol
+
+fixture the price includes all fixtures and fittings
+
+resident local residents
+
+tract digestive tract
+
+interact limited account of time to interact with children
+
+qualitative there are qualitative differences between individuals
+
+considerate he is considerate
+
+supreme the Supreme Commander of the armed forces
+
+obligation fulfill the terms of its obligation
+
+oblige I felt obliged to leave after such an quarrel
+
+external the external appearance of the building
+
+vulgar she gave a rather vulgar laugh
+
+instantaneous
+
+recite
+
+destined these products are destined for the Asian market
+
+tub a long bath in the tub after a day's work
+
+revive 
+
+eagle eagles soaring overhead
+
+stray He strayed into the path of an oncoming car
+
+objection A couple of people voiced their objections to the plan
+
+object 
+
+recur working overtime for several weeks caused a  recurring headache for him
+
+invariably his decision is invariably correct
+
+watertight the container is completely watertight
+
+royalty the group of people were treated like royalty
+
+ethic a violation of a lawyer's professional ethics
+
+dwell don't dwell on past failures
+
+offspring how many offspring does a lion usually have
+
+fling someone had flung a brick through the window
+
+cradle Greece is the cradle of western civilization
+
+portray the novel portrays a strong female character
+
+knit her grandmother is knitting a sweater for her
+
+pole the ancient wooden poles holding up the city underwater
+
+grope he grope around in the dark for his other sock
+
+smoothly  if　everything goes smoothly ,we should arrived=d= by ten o'clock
+
+compassion show their compassion for the victim
+
+inhabit monkeys have inhabited the island for over 100 years
+
+marginal a marginal farm hand could not produce enough to justify his employment . Inequality is not just about the top marginal tax
+
+divine a divine punishment
+
+preview a special preview of our winter fashion collection
+
+nasty stand her nasty temper
+
+hamper our efforts were severely hampered by  a lack of money
+
+congress the open a congress of delegates from the most industrial countries on global warming
+
+dole many young people will have to go on the dole
+
+thesis his thesis is almost finished
+
+capital Paris is the fashion capital
+
+hitherto the weather has hitherto been sunny
+
+weary I am weary after this long journey
+
+renaissance this musician is devoted to the renaissance in classic jazz
+
+beam I could just grope my way in the weak beam of the flashlight
+
+veil she has got a veil over her long hair
+
+jerk he jerked the phone away from her
+
+detain three men were detained as suspects
+
+unemployment Mass unemployment may lead to social instability
+
+quarterly the committee meets quarterly
+
+majesty the queen was seated on the throne in her majesty
+
+mentality people with a get-rich-quick mentality are more likely to break the law
+
+radioactive you should be careful with highly radioactive materials
+
+expense 
+
+convict he is convicted of robbery
+
+splash Water splashed onto the floor
+
+commend his work was highly commended
+
+boycott we are asking people to boycott goods from companies
+
+premise on the premise stated earlier
+
+terrific offers this company a terrific opportunity
+
+pirate a pirate ship
+
+multitude a multitude of people gathered at the gate of the exhibition hall
+
+speculate It is useless to speculate why he did it
+
+foremost Newton was the foremost expert in Physics
+
+internal his internal organs
+
+rip the poster had been ripped to pieces
+
+se
+
