--- a/12月/Machine-Learnning/线性判别分析.md
+++ b/12月/Machine-Learnning/线性判别分析.md
@@ -314,3 +314,39 @@ if __name__ == "__main__":
     print(acc)
 ```
 
+
+
+## 不懂
+
+1.类内散度矩阵为什么
+
+```python
+          self.Sb += len(classi) * np.dot((mui - self.mu).reshape(-1,1),(mui - self.mu).reshape(1,-1))
+```
+
+reshape?
+
+2.
+
+```python
+        #eig_vectors[:i]与 eig_values相对应
+        eig_values, eig_vectors = np.linalg.eig(np.linalg.inv(self.Sw).dot(self.Sb))
+        #寻找d个最大非零广义特征值
+        topd = (np.argsort(eig_values)[::-1])[:self.d]
+        #用d个最大非零广义特征值组成的向量组成w
+        self.w = eig_vectors[:,topd]
+```
+
+3.![image-20221129011602191](https://raw.githubusercontent.com/lozijy/image/main/image-20221129011602191.png)
+
+![image-20221129011733900](https://raw.githubusercontent.com/lozijy/image/main/image-20221129011733900.png)
+
+```python
+print(gauss1) 
+# <scipy.stats._distn_infrastructure.rv_frozen object at 0x121F7DB0>
+
+print(stats.norm.rvs(loc=0,scale=2,size=10))
+# [ 4.04968057 -0.85376074  4.62058049  1.25731984 -0.11082284 -2.63972507 0.81014329 -0.37101067 -0.20334414  2.65743079]
+
+```
+
