--- a/12月/Machine-Learnning/线性回归.md
+++ b/12月/Machine-Learnning/线性回归.md
@@ -8,7 +8,7 @@
 
 
 
-平方误差和:
+使用平方误差和对拟合效果进行检测:
 
 ![img](https://img-blog.csdn.net/20171209165118565?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvYzQwNjQ5NTc2Mg==/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/SouthEast)
 
@@ -26,6 +26,10 @@
 
 ## 局部加权线性回归LWLR
 
+线性回归的一个问题是有可能出现欠拟合现象，因为它求的是具有小均方误差的无偏估 计。显而易见，如果模型欠拟合将不能取得好的预测效果。所以有些方法允许在估计中引入一 些偏差，从而降低预测的均方误差。
+
+其中的一个方法是局部加权线性回归
+
 ### 高斯核函数
 
 ![image-20221128235936819](https://raw.githubusercontent.com/lozijy/image/main/image-20221128235936819.png)
@@ -33,8 +37,6 @@
 在这种方法中我们给待预测的每个点赋予一定的权重
 
 最优回归系数如下:
-
-![](https://raw.githubusercontent.com/lozijy/image/main/image-20221128221433330.png)
 
 ![img](https://img-blog.csdn.net/20171209165606253?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvYzQwNjQ5NTc2Mg==/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/SouthEast)
 
