--- a/12月/computing-method/插值法.md
+++ b/12月/computing-method/插值法.md
@@ -1,4 +1,4 @@
-###  插值法
+# 插值法
 
 我们要求函数fx在某一点xi的值，但是fx的形式是不清楚的，我们只知道其xi的邻近区域的一系列点对应离散值，那么我们可以绘制一条曲线通过这一系列离散点，从而达到拟合的效果
 
@@ -12,7 +12,7 @@
 
 #### 程序
 
-### 牛顿插商法
+### 牛顿差商法
 
 #### 差商的定义
 
@@ -30,7 +30,7 @@ fx每一次求差商都会降一次幂，和导数类似
 
 3.差商与N阶导数的关系
 
-存在一点θ属于[a,b]，满足N阶导数在θ处的取值除以n的阶乘
+存在一点θ属于[a,b]，满足N阶导数在θ处的取值除以n的阶乘等于这个n阶差商
 
 #### 差商表
 
@@ -58,5 +58,125 @@ fx每一次求差商都会降一次幂，和导数类似
 
 ![](C:\Users\lonux\AppData\Roaming\Typora\typora-user-images\image-20221122204235083.png)
 
+#### 与差商的关系:
+
+等距的差商就会进化为差分
+
+#### 差分分类
+
+差分分成向前差分和向后差分
+
+向前差分:上三角
+
+向后差分:下三角，和差商的形式差不多
+
+#### 性质
+
+1.
+
+对相同插值节点构造的向前差分表各项和向后差分表各项按位置对应相等
+
+2.
+
+差分和差商的关系y
+
+### 埃尔米特插值
+
+不是重点..花很少的时间过一遍
+	
+
+### 分段插值
+
+龙格现象导致插值阶次过高插值节点之间逼近很差的现象，所以当插值节点过多时我们一般采用分段插值把插值区间分成若干个子区间，在每个子区间上用较低阶次的代数插值函数逼近被插函数
+
+ # 数值积分
+
+## 基础知识
+
+根据牛顿莱布尼茨公式得到积分公式是: 
+
+![image-20221130152045519](https://raw.githubusercontent.com/lozijy/image/main/image-20221130152045519.png)
+
+但是对于以下情况积分是很难求的:
+
+1.不知道f(x)的具体形式，只能通过观测得到f(x)上的一些离散值
+
+2.F(x)难以找到
+
+3.F(x)不能用有限形式表示
+
+## 数值积分公式
+
+因此我们避开对原函数的求解，转而使用定积分中值定理![image-20221130114509189](https://raw.githubusercontent.com/lozijy/image/main/image-20221130114509189.png)
+
+我们会对这个f(epsilon)进行一个近似估计
+
+两大类方法
+
+1.矩形公式
+
+单点进行模拟，分成左矩形公式，中矩形公式，右矩形公式
+
+2.梯形公式
+
+双点乃至多点进行模拟
+
+取两端点的平均值f(a)+f(b)/2模拟
 
 
+
+最终得到数值积分公式的一般形式:
+
+∑Aif(xi)
+
+Ai是常数
+
+
+
+### 代数精度
+
+对m次的代数多项式保证余项为0,但m+1次不能保证余项为0,则代数精度是m
+
+左右矩形公式精度是0
+
+中矩形公式和梯形公式代数精度是1
+
+
+
+存在定理:对n+1个节点,总存在一组Ai使数值积分公式的代数精度是n
+
+
+
+### 插值型求积公式
+
+将插值函数作为被积函数的近似，然后进行积分
+
+这里我们用拉格朗日插值函数作为被积函数的近似,计算后得到求积公式是:
+
+
+
+余项是:
+
+
+
+求积系数Ai:
+
+
+
+## 牛顿柯特斯公式
+
+一种等间距的代数插值型求积公式
+
+### 我们最常用的三种公式:
+
+梯形公式
+
+n=1
+
+辛普生公式
+
+n=2
+
+柯特斯公式
+
+n=4
